Fixing alignment of brawl section

--- a/src/css/story/brawl-ui.styl
+++ b/src/css/story/brawl-ui.styl
@@ -2,7 +2,7 @@
   display flex
   flex-direction row
   align-items: center
-  margin-bottom 2rem
+  margin-bottom 2.5rem
 
   .ui-display
     display flex
