--- a/src/css/story/brawl.styl
+++ b/src/css/story/brawl.styl
@@ -3,7 +3,7 @@
   flex-direction row
   justify-content: flex-end
   position relative
-  max-width $column-width
+  //max-width $column-width
   margin 0 auto
 
   .scroll-text
@@ -46,6 +46,10 @@
         set-type-size('large', true)
         font-weight 600
         margin-top 0
+        margin-bottom 0.25rem
+
+      .graphic-legend
+        display none
 
     .chart
       position absolute
@@ -58,12 +62,10 @@
 
 
       .brawl
-        //max-width 30rem
-        //margin 0 auto
         display flex
         flex-direction row
         align-items flex-start
-        justify-content center
+        justify-content flex-start
 
         .bin-brand
           order 2
@@ -177,8 +179,6 @@
             .bin-vs
               set-type-size('small', true)
               color $gray
-
-
 
         .bin-labelGroup
           order 0
